--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
         <dotenv.version>2.2.4</dotenv.version>
         <evo-inflector.version>1.3</evo-inflector.version>
         <jacoco.version>0.8.8</jacoco.version>
+        <jasypt-spring-boot.version>3.0.4</jasypt-spring-boot.version>
         <jsoup.version>1.15.3</jsoup.version>
         <junit-jupiter.version>5.9.0</junit-jupiter.version>
         <lombok.version>1.18.24</lombok.version>
@@ -205,6 +206,12 @@
                 <artifactId>lombok-mapstruct-binding</artifactId>
                 <version>${lombok-mapstruct-binding.version}</version>
                 <scope>provided</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>com.github.ulisesbocchio</groupId>
+                <artifactId>jasypt-spring-boot-starter</artifactId>
+                <version>${jasypt-spring-boot.version}</version>
             </dependency>
 
             <dependency>
