--- a/pom.xml
+++ b/pom.xml
@@ -272,6 +272,17 @@
                 <artifactId>ejml-simple</artifactId>
                 <version>${ejml.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.ejml</groupId>
+                <artifactId>ejml-ddense</artifactId>
+                <version>${ejml.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.ejml</groupId>
+                <artifactId>ejml-core</artifactId>
+                <version>${ejml.version}</version>
+            </dependency>
 
 
             <dependency>
