--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>eu.tailoringexpert</groupId>
@@ -29,8 +30,8 @@
         <connection>scm:git:https://github.com/tailoringexpert/dependencies.git</connection>
         <developerConnection>scm:git:https://github.com/tailoringexpert/dependencies.git</developerConnection>
         <url>https://github.com/tailoringexpert/dependencies.git</url>
-		<tag>HEAD</tag>
-  </scm>
+        <tag>HEAD</tag>
+    </scm>
 
     <distributionManagement>
         <snapshotRepository>
@@ -53,6 +54,7 @@
         <dotenv.version>3.0.0</dotenv.version>
         <evo-inflector.version>1.3</evo-inflector.version>
         <jacoco.version>0.8.8</jacoco.version>
+        <jcommander.version>1.82</jcommander.version>
         <jasypt-spring-boot.version>3.0.5</jasypt-spring-boot.version>
         <jsoup.version>1.16.1</jsoup.version>
         <junit-jupiter.version>5.9.3</junit-jupiter.version>
@@ -291,6 +293,12 @@
                 <artifactId>dotenv-java</artifactId>
                 <version>${dotenv.version}</version>
                 <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>com.beust</groupId>
+                <artifactId>jcommander</artifactId>
+                <version>${jcommander.version}</version>
             </dependency>
 
             <dependency>
