--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
         <archunit.version>1.4.1</archunit.version>
         <dotenv.version>3.2.0</dotenv.version>
         <evo-inflector.version>1.3</evo-inflector.version>
+        <io-jsonwebtoken.version>0.12.6</io-jsonwebtoken.version>
         <jacoco.version>0.8.8</jacoco.version>
         <jcommander.version>1.82</jcommander.version>
         <jasypt-spring-boot.version>3.0.5</jasypt-spring-boot.version>
@@ -67,6 +68,8 @@
         <poi.version>5.4.1</poi.version>
         <springboot.version>3.5.0</springboot.version>
         <spring-cloud.version>4.0.4</spring-cloud.version>
+        <spring-ldap.version>3.3.0</spring-ldap.version>
+        <spring-security.version>6.5.0</spring-security.version>
         <springdoc-openapi.version>1.8.0</springdoc-openapi.version>
 
         <!-- tailoring-bom -->
@@ -153,6 +156,30 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-security</artifactId>
                 <version>${springboot.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter-logging</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.ldap</groupId>
+                <artifactId>spring-ldap-core</artifactId>
+                <version>${spring-ldap.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter-logging</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-ldap</artifactId>
+                <version>${spring-security.version}</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.springframework.boot</groupId>
@@ -286,6 +313,22 @@
                 <version>${ejml.version}</version>
             </dependency>
 
+            <!-- jwt -->
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-api</artifactId>
+                <version>${io-jsonwebtoken.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-impl</artifactId>
+                <version>${io-jsonwebtoken.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-jackson</artifactId>
+                <version>${io-jsonwebtoken.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>io.github.cdimascio</groupId>
